github_data_collector/src/data/issue_comment/johnno1962_InjectionIII.txt
 *** dlopen() error: dlopen(/Users/apple/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval103.dylib, 2): Symbol not found: _$s9Ehospital12TGLayoutSizeC5equal_9increment8multipleA2CSg_12CoreGraphics7CGFloatVAJtFfA0_
  Referenced from: /Users/apple/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval103.dylib
  Expected in: flat namespace
 in /Users/apple/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval103.dylib ***
i used storyboard, and a tableViewController. when i command + s , the project will crash,and log: "I've been injected: *nil description*"
what is wrong ?
here is the log printed in the console:

游눌 *** Compiling /Users/bytegm/Desktop/workspace/iOS/SMTrainTime/Classes/HomeViewController.m ***
游눌 Loading .dylib ...
游눌 *** dlopen() error: dlopen(/Users/bytegm/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval102.dylib, 2): Symbol not found: _OBJC_CLASS_$_QWAppConfigCenter
  Referenced from: /Users/bytegm/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval102.dylib
  Expected in: flat namespace


which QWAppConfigCenter is a class in my project. and also HomeViewController

How can I solve this problem? thanks! 
Xcode: 11.3
iOS Simulator: 13.3
Derived data: Default
Version: 1.8 (also tried with 1.7, updated to 1.8 to see if it fixed this issue)
Code reloading: Working wonderfully!

When I change a storyboard and save, I get an error in the console:
`游눌 *** Could not locate storyboard compile ***`

I understand storyboard/xib support is experimental, but oh my god would it be wonderful to have fully functional. I tried doing a cmd-b like I saw suggested in another post, but no such luck.. it actually prints the exact same error as soon as I hit cmd-b on the unsaved storyboard.

Let me know if there's anything I can do to help - logs to pull or something. 
This tool is incredible though and you are a saint for creating it!
InjectionIII cannot `file watcher` on project that create by Swift Package Manager.
Work around is to create xcodeproj by `swift package generate-xcodeproj`.

Is it be possible to use package.swift without xcodeproj?


I couldn't resolve my issue by looking into other threads.

Injection connects correctly, 

游눌 Injection connected 游녨
游눌 Watching /****/code/trunk/**

and when I hit command-save, the console fires:

游눌 *** Compiling /******/AppDelegate.m ***
游눌 Loading .dylib ...
游눌 *** dlopen() error: dlopen(/Users/martin.ren/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval102.dylib, 2): Symbol not found: _OBJC_CLASS_$_BaseTabBarController
  Referenced from: /Users/martin.ren/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval102.dylib
  Expected in: flat namespace
 in /Users/martin.ren/Library/Containers/com.johnholdsworth.InjectionIII/Data/eval102.dylib ***

Injection: v1.7
Xcode: v11.0 (named as Xcode.app in Applications directory)

The programming language: Objective-C.
Any file saved will report an error like this.
 InjectionIII always recompile swift file fail when search c header to bridge header once I using:
#import <UMPUsh/UMessage.h> rather than #import "UMessage.h"

游눌 *** Re-compilation failed (/Users/mi/Library/Containers/com.johnholdsworth.InjectionIII/Data/command.sh)
/Users/mi/Desktop/xxx/Resources/bridging-Header.h:23:9: error: 'UMPUsh/UMessage.h' file not found
#import <UMPUsh/UMessage.h>
        ^
<unknown>:0: error: failed to import bridging header '/Users/mi/Desktop/xxx/Resources/bridging-Header.h'
 ***

It there any solution?
Is my first time using Injection, haven't been able to make it work yet.

OSX : 10.15
Xcode: 10.3

游눌 *** Compiling /Users/xxxx/xxxx/xxxx/xxxx/Login/ViewController/AboutUsViewController.swift ***
游눌 *** Re-compilation failed (/Users/xxxx/Library/Containers/com.johnholdsworth.InjectionIII/Data/command.sh)
<unknown>:0: error: cannot open file '/var/folders/f7/vd06n1t97qv1kc_vl8fqg8pr0000gp/T/sources-773804' (No such file or directory)
 ***

this is what I get on Xcode console when saving a file
Hi庸I write ui interface with [Flexlib](https://github.com/zhenglibao/FlexLib), InjectionIII print error 
'Yoga.modulemap' not found.
Changes in.m files can be refreshed normally, but changes in Xib files cannot be refreshed. Why? My Xcode version is 10.3 